syntax = "proto3";
package reapchain.types;

option go_package = "github.com/reapchain/reapchain-core/proto/reapchain/types";

import "gogoproto/gogo.proto";
import "reapchain/crypto/keys.proto";
import "google/protobuf/timestamp.proto";
import "reapchain/types/steering_member_candidate.proto";

message VrfSet {
  int64 height = 1;
  repeated Vrf vrfs         = 2;
  reapchain.types.SteeringMemberCandidateSet steering_member_candidate_set  = 3;
}

message Vrf {
  int64 height = 1;
  google.protobuf.Timestamp timestamp = 2 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  reapchain.crypto.PublicKey steering_member_candidate_pub_key           = 3 [(gogoproto.nullable) = false];
  bytes value = 4;
  bytes proof         = 5;
  int32 steering_member_candidate_index         = 6;
  bytes seed = 7;
}
